@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST midori-0.1.1.tar.bz2 309109 RMD160 936e9f310ee1d3b9546eee8ed1806bf8d1827d53 SHA1 df1176aa584369f04e5e7e76bc4e193af0580ab0 SHA256 e0a521533e999b8541d3c8ed3cedfa6b353f66a66b2ae8c5e309485ae79bbbe7
 EBUILD midori-0.1.1.ebuild 1489 RMD160 136849ded897477b5ada0e187f9ee881cb7e4215 SHA1 755d2165a46f9e21826789fe0a4485f6714567c1 SHA256 4dde70ed6bc47df93f10e8f517400d4dc2a9a4adb6f2c27f3ceb39975fb7b3e8
-EBUILD midori-9999.ebuild 1482 RMD160 49537f0e82bd272373d19ec6be053b6c16c5ad60 SHA1 8793bcdde38ff9b712005b23a19f9079fff5a772 SHA256 9facfed3b749fec93f6f67c77f017c5e8eb10c2d9f40ef5643e7e489246ae11f
-MISC ChangeLog 289 RMD160 58937dc5af5d59047318d8f464ca6cf5c8dcc8d7 SHA1 22db7696a2c6afc0ad556cb1393233eaa32fca41 SHA256 b7dff1ced0836a10afe7aae32d5b21923de8cea63d2e995f8c4bc458aceff33e
+EBUILD midori-9999.ebuild 1394 RMD160 c72664dfd6702100a3dd884b3586e2c4d4cc7be4 SHA1 63f8e4d1126d6f3b7347882d7367b1592fa2aa57 SHA256 40e5a084116796574119903ca7e87bec443a2d9a919cc04e02f46da8bccd868d
+MISC ChangeLog 436 RMD160 657395d2bef38c428de2b220c5e7d727ca097805 SHA1 d82ecdcc1f4df2bc0b468bb2ff3479609fe0a843 SHA256 eeef6233296cee24af00bae4b861d77a47c68edbdb805bee3dae0ddadcb83875
 MISC metadata.xml 313 RMD160 4f246d861576fec820b0f47f72aaf2f65212c213 SHA1 b99c81d8904c399952cb052d3f199febdc686607 SHA256 3b38fde03519c5e4aee213c8a59510553b1cb6d9a24c69cc90ef0fb797a1012e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkk7JhsACgkQKhnDs22gwa+X0gCdE7YRdr1vST24l1NYWjR4ECnd
+dfUAn3Sl4hRV1dG8Cdwa08WUCr7N1K1b
+=B4zX
+-----END PGP SIGNATURE-----
